# win-count-by-artywoof

./: # Code Citations.md  .gitignore  AI_FILES_CHECKLIST.md  AUTO_REPEAT_FIX_SUMMARY.md  AUTO_REPEAT_NOT_WORKING_FIX.md  AUTO_UPDATE_SETUP.md  BACKDROP_BACKUP.md  BACKUP_APP_CSS.css  BACKUP_APP_FINAL.css  BACKUP_APP_RAINBOW_FINAL.css  BACKUP_CARGO_PERFECT.toml  BACKUP_FINAL_INFO.md  BACKUP_LAYOUT_FINAL.svelte  BACKUP_MAIN_PERFECT.rs  BACKUP_OVERLAY_FINAL.svelte  BACKUP_PAGE_CURRENT.svelte  BACKUP_PAGE_FINAL.svelte  BACKUP_RAINBOW_INFO.md  BACKUP_README.md  BACKUP_STATUS.md  CURRENT_STATE_BACKUP.md  DEPLOYMENT.md  DEVELOPMENT_COMPLETE_SUMMARY.md  FINAL_FIX_SUMMARY.md  FINAL_SIMPLE_HOTKEY_FIX.md  FINAL_TEST_REPORT.md  FIX_NEGATIVE_NUMBER_DISPLAY.md  FONT_SCALING_FOR_LARGE_NUMBERS.md  HOTKEY_BEHAVIOR_TEST.md  HOTKEY_DUPLICATE_PROBLEM_SUMMARY.md  HOTKEY_FIXES_SUMMARY.md  HOTKEY_FIX_SOLUTION.md  HOTKEY_PERFECT_SOLUTION_BACKUP.md  HOTKEY_SOLUTION_SUCCESS.md  HOTKEY_TEST_PLAN.md  INSTALLER_README.md  KEY_RELEASE_ENHANCED_FIX.md  KEY_RELEASE_TEST_REPORT.md  LICENSE  LICENSE.txt  (+68 more)
ai-sync-api/: index.ts  server.ts  tsconfig.json  types-bun.d.ts  types.ts
api/: create-license.js  health.js  heartbeat.js  package.json  validate-license.js
backup-20250629-163647/: +layout.svelte  +page.svelte  app.css  tailwind.config.js
for you/: DO_NOT_FORGET_THIS.md  QUICK_REFERENCE.md  (+2 more)
src-tauri/: Cargo.toml  build.rs  installer.wxs  latest.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  license.rs  main.rs  promptpay.rs
(+110 files in other folders)
