[package]
name = "win-count-by-artywoof"
version = "1.0.1"  # 🎯 Version หลัก - อัพเดทตรงนี้เมื่อ release
description = "Win Counter for TikTok Live Streamers by ArtYWoof"
authors = ["ArtYWoof <your-email@example.com>"]
license = "MIT"
edition = "2021"
repository = "https://github.com/artywoof/win-count-by-artywoof"
homepage = "https://github.com/artywoof/win-count-by-artywoof"
keywords = ["tauri", "streaming", "counter", "tiktok", "live"]
categories = ["multimedia", "games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2.0"
tauri-plugin-opener = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# เพิ่มใหม่:
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
uuid = "1.0"
base64 = "0.21"
machine-uid = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
regex = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
futures-util = "0.3"
rand = "0.8"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi", "consoleapi"] }
